2009-10-09  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.Refactoring.ConvertPropery/RemoveBackingStore.cs:
	* MonoDevelop.Refactoring.CreateClass/CreateClassCodeGenerator.cs:
	  Fixed unit test.

2009-10-09  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.CodeGeneration/GenerateCodeWindow.cs: Call move
	  after show.

2009-10-09  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.Refactoring.ExtractMethod/ExtractMethodRefactoring.cs:
	  Fixed 'Bug 545119 - Refactor -> "Extract Method..." removes
	  comments and new lines'.

2009-10-08  Ankit Jain  <jankit@novell.com>

	* MonoDevelop.Refactoring.csproj: Mark the *-sharp references
	with SpecificVersion=false.

2009-10-08  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.Refactoring.CreateMethod/CreateMethodCodeGenerator.cs:
	  fixed naming of new methods.

2009-10-08  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.Refactoring.DeclareLocal/DeclareLocalCodeGenerator.cs:
	  declare local now generates a more .NET like name.

2009-10-07  Lluis Sanchez Gual  <lluis@novell.com>

	* AssemblyInfo.cs:
	* MonoDevelop.Refactoring.addin.xml: Bump MD version.

2009-10-05  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.Refactoring/RefactoryCommands.cs: added null
	  check.

2009-10-05  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.Refactoring.addin.xml:
	* MonoDevelop.Refactoring/RefactoryCommands.cs:
	* MonoDevelop.Refactoring/AbstractRefactoringCommandHandler.cs:
	* MonoDevelop.Refactoring.RefactorImports/RemoveUnusedImportsRefactoring.cs:
	  Fixed 'Bug 544027 - "Organize Usings" commands should only
	  be visible in usings section'.

2009-10-05  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.Refactoring/RefactoryCommands.cs: Fixed "Bug
	  543970 - "Goto class part" pad is not focused".

2009-09-29  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.CodeGeneration/WriteLineGenerator.cs: better
	  sort order in writeline code generator: local vars ->